feat: added empty lib for PV module

--- a/thesis_pv_emulator_imgui/thesis_pv_emulator_imgui.vcxproj
+++ b/thesis_pv_emulator_imgui/thesis_pv_emulator_imgui.vcxproj
@@ -142,6 +142,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="PV\src\pv.cpp" />
     <ClCompile Include="vendors\ImGui\backends\imgui_impl_dx9.cpp" />
     <ClCompile Include="vendors\ImGui\backends\imgui_impl_win32.cpp" />
     <ClCompile Include="vendors\ImGui\imgui.cpp" />
@@ -154,6 +155,7 @@
     <ClCompile Include="vendors\ImPlot\implot_items.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="PV\include\pv.h" />
     <ClInclude Include="vendors\ImGui\backends\imgui_impl_dx9.h" />
     <ClInclude Include="vendors\ImGui\backends\imgui_impl_win32.h" />
     <ClInclude Include="vendors\ImGui\imconfig.h" />
