--- a/thesis_pv_emulator_imgui/imgui.ini
+++ b/thesis_pv_emulator_imgui/imgui.ini
@@ -7,11 +7,11 @@ Pos=200,169
 Size=471,507
 
 [Window][Input Parameters]
-Pos=2,6
+Pos=3,9
 Size=483,747
 
 [Window][Dear ImGui Demo]
-Pos=252,61
+Pos=0,34
 Size=627,652
 
 [Window][Dear ImGui Demo/ResizableChild_D5443E47]
@@ -23,6 +23,10 @@ IsChild=1
 Size=200,100
 
 [Window][Voltage - Current Plot]
-Pos=501,48
-Size=752,401
+Pos=487,7
+Size=770,744
+
+[Window][ImPlot Demo]
+Pos=560,41
+Size=600,659
 
