--- a/thesis_pv_emulator_imgui/imgui.ini
+++ b/thesis_pv_emulator_imgui/imgui.ini
@@ -7,12 +7,13 @@ Pos=200,169
 Size=471,507
 
 [Window][Input Parameters]
-Pos=3,9
-Size=483,747
+Pos=5,4
+Size=465,768
 
 [Window][Dear ImGui Demo]
-Pos=0,34
+Pos=269,3
 Size=627,652
+Collapsed=1
 
 [Window][Dear ImGui Demo/ResizableChild_D5443E47]
 IsChild=1
@@ -25,8 +26,19 @@ Size=200,100
 [Window][Voltage - Current Plot]
 Pos=487,7
 Size=770,744
+Collapsed=1
 
 [Window][ImPlot Demo]
-Pos=560,41
+Pos=550,68
 Size=600,659
+
+[Window][Current / Power - Voltage Plot]
+Pos=471,4
+Size=809,768
+
+[Table][0x306783DE,3]
+RefScale=13
+Column 0  Width=75
+Column 1  Width=75
+Column 2  Weight=1.0000
 
