fix: name lib modifications

--- a/thesis_pv_emulator_imgui/thesis_pv_emulator_imgui.vcxproj.filters
+++ b/thesis_pv_emulator_imgui/thesis_pv_emulator_imgui.vcxproj.filters
@@ -48,7 +48,7 @@
     <ClCompile Include="vendors\ImPlot\implot_items.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="PV\src\pv.cpp">
+    <ClCompile Include="pv\src\pv.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -83,7 +83,7 @@
     <ClInclude Include="vendors\ImPlot\implot_internal.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="PV\include\pv.h">
+    <ClInclude Include="pv\include\pv.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
