feat: added docking to the main app + split the pv and iv curves

--- a/thesis_pv_emulator_imgui/imgui.ini
+++ b/thesis_pv_emulator_imgui/imgui.ini
@@ -1,14 +1,18 @@
 [Window][Debug##Default]
 Pos=60,60
 Size=400,400
+Collapsed=0
 
 [Window][Hello, world!]
 Pos=200,169
 Size=471,507
+Collapsed=0
 
 [Window][Input Parameters]
-Pos=5,4
-Size=465,768
+Pos=0,0
+Size=504,1009
+Collapsed=0
+DockId=0x00000001,0
 
 [Window][Dear ImGui Demo]
 Pos=269,3
@@ -31,14 +35,41 @@ Collapsed=1
 [Window][ImPlot Demo]
 Pos=550,68
 Size=600,659
+Collapsed=0
 
 [Window][Current / Power - Voltage Plot]
-Pos=471,4
-Size=809,768
+Pos=505,0
+Size=1415,1009
+Collapsed=0
+DockId=0x00000003,0
+
+[Window][DockSpaceViewport_11111111]
+Pos=0,0
+Size=1920,1009
+Collapsed=0
+
+[Window][Current - Voltage Plot]
+Pos=506,0
+Size=1414,510
+Collapsed=0
+DockId=0x00000003,0
+
+[Window][Power - Voltage Plot]
+Pos=506,512
+Size=1414,497
+Collapsed=0
+DockId=0x00000004,0
 
 [Table][0x306783DE,3]
 RefScale=13
 Column 0  Width=75
 Column 1  Width=75
 Column 2  Weight=1.0000
+
+[Docking][Data]
+DockSpace     ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,0 Size=1920,1009 Split=X
+  DockNode    ID=0x00000001 Parent=0x8B93E3BD SizeRef=504,761 Selected=0xD9A6EA35
+  DockNode    ID=0x00000002 Parent=0x8B93E3BD SizeRef=1414,761 Split=Y Selected=0x22148230
+    DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=759,510 CentralNode=1 Selected=0xF5F77D9E
+    DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=759,497 Selected=0x22148230
 
