--- a/thesis_pv_emulator_imgui/imgui.ini
+++ b/thesis_pv_emulator_imgui/imgui.ini
@@ -10,7 +10,7 @@ Collapsed=0
 
 [Window][Input Parameters]
 Pos=0,0
-Size=504,1009
+Size=509,797
 Collapsed=0
 DockId=0x00000001,0
 
@@ -45,18 +45,18 @@ DockId=0x00000003,0
 
 [Window][DockSpaceViewport_11111111]
 Pos=0,0
-Size=1920,1009
+Size=1324,797
 Collapsed=0
 
 [Window][Current - Voltage Plot]
-Pos=506,0
-Size=1414,510
+Pos=511,0
+Size=813,399
 Collapsed=0
 DockId=0x00000003,0
 
 [Window][Power - Voltage Plot]
-Pos=506,512
-Size=1414,497
+Pos=511,401
+Size=813,396
 Collapsed=0
 DockId=0x00000004,0
 
@@ -67,9 +67,9 @@ Column 1  Width=75
 Column 2  Weight=1.0000
 
 [Docking][Data]
-DockSpace     ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,0 Size=1920,1009 Split=X
-  DockNode    ID=0x00000001 Parent=0x8B93E3BD SizeRef=504,761 Selected=0xD9A6EA35
-  DockNode    ID=0x00000002 Parent=0x8B93E3BD SizeRef=1414,761 Split=Y Selected=0x22148230
-    DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=759,510 CentralNode=1 Selected=0xF5F77D9E
-    DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=759,497 Selected=0x22148230
+DockSpace     ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,0 Size=1324,797 Split=X
+  DockNode    ID=0x00000001 Parent=0x8B93E3BD SizeRef=509,761 Selected=0xD9A6EA35
+  DockNode    ID=0x00000002 Parent=0x8B93E3BD SizeRef=753,761 Split=Y Selected=0xF5F77D9E
+    DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=1309,363 CentralNode=1 Selected=0xF5F77D9E
+    DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=1309,396 Selected=0x22148230
 
