--- a/thesis_pv_emulator_imgui/thesis_pv_emulator_imgui.vcxproj.filters
+++ b/thesis_pv_emulator_imgui/thesis_pv_emulator_imgui.vcxproj.filters
@@ -51,6 +51,9 @@
     <ClCompile Include="pv\src\pv.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="async_com\src\async_com.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="vendors\ImGui\imstb_truetype.h">
@@ -84,6 +87,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="pv\include\pv.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="async_com\include\async_com.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
