--- a/thesis_pv_emulator_imgui/imgui.ini
+++ b/thesis_pv_emulator_imgui/imgui.ini
@@ -10,9 +10,9 @@ Collapsed=0
 
 [Window][Input Parameters]
 Pos=0,0
-Size=543,793
+Size=543,509
 Collapsed=0
-DockId=0x00000001,0
+DockId=0x00000005,0
 
 [Window][Dear ImGui Demo]
 Pos=269,3
@@ -60,6 +60,12 @@ Size=991,413
 Collapsed=0
 DockId=0x00000004,0
 
+[Window][Simulation]
+Pos=0,511
+Size=543,282
+Collapsed=0
+DockId=0x00000006,0
+
 [Table][0x306783DE,3]
 RefScale=13
 Column 0  Width=75
@@ -68,7 +74,9 @@ Column 2  Weight=1.0000
 
 [Docking][Data]
 DockSpace     ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,0 Size=1536,793 Split=X
-  DockNode    ID=0x00000001 Parent=0x8B93E3BD SizeRef=543,761 Selected=0xD9A6EA35
+  DockNode    ID=0x00000001 Parent=0x8B93E3BD SizeRef=543,761 Split=Y Selected=0xD9A6EA35
+    DockNode  ID=0x00000005 Parent=0x00000001 SizeRef=543,509 Selected=0xD9A6EA35
+    DockNode  ID=0x00000006 Parent=0x00000001 SizeRef=543,282 Selected=0xFBEA9FC2
   DockNode    ID=0x00000002 Parent=0x8B93E3BD SizeRef=991,761 Split=Y Selected=0xF5F77D9E
     DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=1309,378 CentralNode=1 Selected=0xF5F77D9E
     DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=1309,413 Selected=0x22148230
