--- a/thesis_pv_emulator_imgui/imgui.ini
+++ b/thesis_pv_emulator_imgui/imgui.ini
@@ -9,15 +9,15 @@ Size=471,507
 Collapsed=0
 
 [Window][Input Parameters]
-Pos=0,0
-Size=536,646
+Size=468,487
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][Dear ImGui Demo]
-Pos=269,3
-Size=627,652
-Collapsed=1
+Pos=0,0
+Size=436,761
+Collapsed=0
+DockId=0x0000000A,0
 
 [Window][Dear ImGui Demo/ResizableChild_D5443E47]
 IsChild=1
@@ -33,9 +33,10 @@ Size=770,744
 Collapsed=1
 
 [Window][ImPlot Demo]
-Pos=360,32
-Size=600,659
+Pos=438,0
+Size=826,761
 Collapsed=0
+DockId=0x00000003,0
 
 [Window][Current / Power - Voltage Plot]
 Pos=505,0
@@ -45,24 +46,24 @@ DockId=0x00000003,0
 
 [Window][DockSpaceViewport_11111111]
 Pos=0,0
-Size=1920,1009
+Size=1264,761
 Collapsed=0
 
 [Window][Current - Voltage Plot]
-Pos=538,0
-Size=1382,489
+Pos=470,0
+Size=794,328
 Collapsed=0
 DockId=0x00000003,0
 
 [Window][Power - Voltage Plot]
-Pos=538,491
-Size=1382,518
+Pos=470,330
+Size=794,431
 Collapsed=0
 DockId=0x00000004,0
 
 [Window][Simulation]
-Pos=0,648
-Size=536,361
+Pos=0,489
+Size=468,272
 Collapsed=0
 DockId=0x00000006,0
 
@@ -73,11 +74,13 @@ Column 1  Width=75
 Column 2  Weight=1.0000
 
 [Docking][Data]
-DockSpace     ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,0 Size=1920,1009 Split=X
-  DockNode    ID=0x00000001 Parent=0x8B93E3BD SizeRef=536,761 Split=Y Selected=0xD9A6EA35
-    DockNode  ID=0x00000005 Parent=0x00000001 SizeRef=543,646 Selected=0xD9A6EA35
-    DockNode  ID=0x00000006 Parent=0x00000001 SizeRef=543,361 Selected=0xFBEA9FC2
-  DockNode    ID=0x00000002 Parent=0x8B93E3BD SizeRef=1382,761 Split=Y Selected=0xF5F77D9E
-    DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=1309,489 CentralNode=1 Selected=0xF5F77D9E
-    DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=1309,518 Selected=0x22148230
+DockSpace       ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,0 Size=1264,761 Split=X
+  DockNode      ID=0x0000000A Parent=0x8B93E3BD SizeRef=436,761 Selected=0xE87781F4
+  DockNode      ID=0x0000000B Parent=0x8B93E3BD SizeRef=826,761 Split=X
+    DockNode    ID=0x00000001 Parent=0x0000000B SizeRef=468,761 Split=Y Selected=0xD9A6EA35
+      DockNode  ID=0x00000005 Parent=0x00000001 SizeRef=543,646 Selected=0xD9A6EA35
+      DockNode  ID=0x00000006 Parent=0x00000001 SizeRef=543,361 Selected=0xFBEA9FC2
+    DockNode    ID=0x00000002 Parent=0x0000000B SizeRef=794,761 Split=Y Selected=0xF5F77D9E
+      DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=1309,391 CentralNode=1 Selected=0xB903C8C9
+      DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=1309,431 Selected=0x22148230
 
