--- a/pvwatch/pvwatch.vcxproj
+++ b/pvwatch/pvwatch.vcxproj
@@ -22,8 +22,9 @@
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
     <ProjectGuid>{8f18ac49-793e-418c-a1f2-dcef4f94946b}</ProjectGuid>
-    <RootNamespace>thesispvemulatorimgui</RootNamespace>
+    <RootNamespace>pvwatch</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>pvwatch</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
