--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "pvwatch/libraries/imgui"]
 	path = pvwatch/libraries/imgui
 	url = https://github.com/ocornut/imgui.git
+[submodule "pvwatch/libraries/implot"]
+	path = pvwatch/libraries/implot
+	url = https://github.com/epezent/implot.git
